# -TERMINAL-GAME-Solitaire

./: .gitignore  CMakeLists.txt  README.md
src/: klondike.cpp  main.cpp  renderer.cpp  ultils.cpp
src/headers/: card.hpp  deck.hpp  klondike.hpp  pile.hpp  renderer.hpp  ultils.hpp
